--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "click>=8.1.8",
+    "gcsfs>=2024.12.0",
+    "ipykernel>=6.29.5",
     "matplotlib",
-    "polars"
+    "polars",
 ]
